--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,9 @@
         "guzzlehttp/guzzle": "^7.10",
         "laravel/framework": "^12.0",
         "laravel/sanctum": "*",
+        "laravel/telescope": "^5.16",
         "laravel/tinker": "^2.10.1",
-        "spatie/laravel-pdf": "*",
+        "spatie/laravel-pdf": "^1.8",
         "spatie/laravel-permission": "^6.23"
     },
     "require-dev": {
